force-app/main/default/objects/Issues_Risks__c/Issues_Risks__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents an issue or risk with some parts of the project plan.</description>
    <label>Issue/Risk</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Risk/Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues/Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>