force-app/main/default/objects/Issues_Risks__c/fields/Actual_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Resolution_Date__c</fullName>
    <description>Issue/Risk&#39;s actual resolution date</description>
    <label>Actual Resolution Date</label>
    <type>Date</type>
</CustomField>