force-app/main/default/objects/Issues_Risks__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <description>Number of Days since issue/risk is opened</description>
    <formula>IF(NOT(ISPICKVAL(Status__c, &quot;Closed&quot;)), NOW() - CreatedDate,  Actual_Resolution_Date__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>