force-app/main/default/objects/Issues_Risks__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the issue/risk.</description>
    <inlineHelpText>Detailed description of the issue/risk.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>