force-app/main/default/objects/Issues_Risks__c/fields/Impact_Description__c.field-meta.xml
<CustomField>
    <fullName>Impact_Description__c</fullName>
    <description>Details of impact associated with the issue/risk</description>
    <label>Impact Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>