force-app/main/default/objects/Issues_Risks__c/fields/Likely_Impact__c.field-meta.xml
<CustomField>
    <fullName>Likely_Impact__c</fullName>
    <description>Likely impact of an impending risk.</description>
    <inlineHelpText>Likely impact of an impending risk.</inlineHelpText>
    <label>Likely Impact</label>
    <type>TextArea</type>
</CustomField>