force-app/main/default/objects/Issues_Risks__c/fields/Logged_Date__c.field-meta.xml
<CustomField>
    <fullName>Logged_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>issue/risk logged date</description>
    <label>Logged Date</label>
    <type>Date</type>
</CustomField>