force-app/main/default/objects/Issues_Risks__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Milestone related to this Issue/Risk.</description>
    <inlineHelpText>Milestone related to this Issue/Risk.</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Issues/Risks</relationshipLabel>
    <relationshipName>Issues_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>