force-app/main/default/objects/Issues_Risks__c/fields/Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Description__c</fullName>
    <description>Description of type of issue/risk</description>
    <label>Other Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>