force-app/main/default/objects/Issues_Risks__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of issue/risk logger</description>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Issues/Risks</relationshipLabel>
    <relationshipName>Issues_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>