force-app/main/default/objects/Issues_Risks__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <description>issue/risk is due or solved</description>
    <formula>IF( ISPICKVAL(Status__c , &quot;Open&quot;) &amp;&amp;  Target_Resolution_Date__c &lt; TODAY(), &quot;Yes&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due?</label>
    <type>Text</type>
</CustomField>