force-app/main/default/objects/Issues_Risks__c/fields/Related_Workstream__c.field-meta.xml
<CustomField>
    <fullName>Related_Workstream__c</fullName>
    <description>Department related to issue/risk</description>
    <inlineHelpText>These values will be customizable based on your project needs.</inlineHelpText>
    <label>Related Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Contact Management</fullName>
            </value>
            <value>
                <fullName>Data Integration</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Opportunity Management</fullName>
            </value>
            <value>
                <fullName>Overall Project</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>