force-app/main/default/objects/Issues_Risks__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Issues and Risks for this release.</description>
    <inlineHelpText>Issues and Risks for this release.</inlineHelpText>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Issues/Risks</relationshipLabel>
    <relationshipName>Issues_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>