force-app/main/default/objects/Issues_Risks__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows Issue/Risk&#39;s related request</description>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Issues/Risks</relationshipLabel>
    <relationshipName>Issues_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>