force-app/main/default/objects/Issues_Risks__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Detail description of resolution</description>
    <label>Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>