force-app/main/default/objects/Issues_Risks__c/fields/Resolution_Mitigating_Actions__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Mitigating_Actions__c</fullName>
    <description>Action description needs to be taken</description>
    <label>Resolution / Mitigating Actions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>