force-app/main/default/objects/Issues_Risks__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <description>Level of severity of issue/risk</description>
    <label>Risk / Issue Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executive Steering Committee</fullName>
            </value>
            <value>
                <fullName>Leadership Team</fullName>
            </value>
            <value>
                <fullName>Project Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>