force-app/main/default/objects/Issues_Risks__c/fields/Risk_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation_Plan__c</fullName>
    <description>Document the mitigation plan for this risk.</description>
    <inlineHelpText>Document the mitigation plan for this risk.</inlineHelpText>
    <label>Risk Mitigation Plan</label>
    <type>TextArea</type>
</CustomField>