force-app/main/default/objects/Issues_Risks__c/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <description>Individual projects can chose specific definition of Severity levels that meet their needs.</description>
    <inlineHelpText>Severity of the impact the Issue or Risk will have on the project if not resolved. Consider immediate and downstream impacts.</inlineHelpText>
    <label>Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Low</fullName>
            </value>
            <value>
                <fullName>2 - Low</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4 - High</fullName>
            </value>
            <value>
                <fullName>5 - Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>