force-app/main/default/objects/Issues_Risks__c/fields/Target_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Resolution_Date__c</fullName>
    <description>Planned date to resolve issue/risk</description>
    <label>Target Resolution Date</label>
    <type>Date</type>
</CustomField>