force-app/main/default/objects/Issues_Risks__c/fields/Training_Material_Object__c.field-meta.xml
<CustomField>
    <fullName>Training_Material_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Material Object</label>
    <referenceTo>Training_Material__c</referenceTo>
    <relationshipLabel>Issues/Risks</relationshipLabel>
    <relationshipName>Issues_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>