force-app/main/default/objects/Issues_Risks__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <description>Create/Update any issues with the project.</description>
    <label>Issue</label>
</RecordType>