force-app/main/default/objects/Issues_Risks__c/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <description>Create/Update any risks with the project.</description>
    <label>Risk</label>
</RecordType>