force-app/main/default/objects/Issues_Risks__c/validationRules/Act_Resloution_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Act_Resloution_Date</fullName>
    <active>true</active>
    <description>Actual Resolution should not be greater than current date.</description>
    <errorConditionFormula>Actual_Resolution_Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Actual_Resolution_Date__c</errorDisplayField>
    <errorMessage>Actual resolution date should not be greater than today&#39;s date</errorMessage>
</ValidationRule>