force-app/main/default/objects/Issues_Risks__c/validationRules/IR_Res_Date_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>IR_Res_Date_Val</fullName>
    <active>false</active>
    <description>Resolution Date should be greater than logged date.</description>
    <errorConditionFormula>OR(Target_Resolution_Date__c  &lt; Logged_Date__c,  Actual_Resolution_Date__c &lt;  Logged_Date__c )</errorConditionFormula>
    <errorMessage>Resolution Date should be greater than issue/risk logged date.</errorMessage>
</ValidationRule>