force-app/main/default/objects/Issues_Risks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Release__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>Target_Resolution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All</label>
</ListView>